# gd32f103-bare-metal-blinky-led

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
include/: utils.h
ld/: gd32f103c8t6.ld
src/: main.cpp  utils.cpp
startup/: startup_gd32f10x_md.s  system_gd32f10x.cpp
